--- a/style.css
+++ b/style.css
@@ -26,7 +26,12 @@ a:focus {
     text-decoration: none;
     transition: all 0.3s;
 }
-
+.rfill {
+    width: 90%; 
+    padding: 0 0; 
+    margin: 0 0; 
+    margin-left:-10px;
+}
 .navbar {
     padding: 15px 10px;
     background: #fff;
@@ -41,7 +46,11 @@ a:focus {
     outline: none !important;
     border: none;
 }
-
+.rmenu {
+    font-size: 20px;
+    margin-top: 10px;
+    color: #444;
+}
 .line {
     width: 100%;
     height: 1px;
