--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ body {
     background: #fafafa;
 }
 .title {
-    color: #777;
+    color: #7386D5;
     font-size: 26px;
+    font-weight: bold;
 }
 p {
     font-family: 'Poppins', sans-serif;
@@ -46,11 +47,7 @@ a:focus {
     outline: none !important;
     border: none;
 }
-.rmenu {
-    font-size: 20px;
-    margin-top: 10px;
-    color: #444;
-}
+
 .line {
     width: 100%;
     height: 1px;
